--- a/src/components/helpers/clock/clock.css
+++ b/src/components/helpers/clock/clock.css
@@ -12,6 +12,7 @@
   height: var(--size);
   width: var(--size);
   display: none;
+  --background: transparent !important;
 }
 
 :host stellar-chart.db {
